--- a/ModernControls/Themes/ExtendedTreeViewStyle.xaml
+++ b/ModernControls/Themes/ExtendedTreeViewStyle.xaml
@@ -125,7 +125,7 @@
     
     <HierarchicalDataTemplate DataType="{x:Type internalClasses:SolutionTreeItem}"
                             ItemsSource = "{Binding Path=Items}">
-        <local:ExtendedTreeViewItem Header="{Binding Path=Title}" Tag="{Binding Path=FilePath}" x:Name="ItemTemplate" Type="{Binding Path=Type}"/>
+        <local:ExtendedTreeViewItem Header="{Binding Path=Title}" Tag="{Binding Path=FilePath}" x:Name="ItemTemplate" Type="{Binding Path=Type}" ProjectPath="{Binding Path=ProjectPath}"/>
     </HierarchicalDataTemplate>
 
 
