--- a/ModernControls/Themes/WorkplaceStyle.xaml
+++ b/ModernControls/Themes/WorkplaceStyle.xaml
@@ -43,17 +43,17 @@
                                 <MenuItem Header="Close" x:Name="CloseMenuItem"/>
                             </MenuItem>
                             <MenuItem Header="PROJECT">
-                                <!--<MenuItem Header="Add Flowchart"/>
-                                <Separator/>
-                                <MenuItem Header="Import">
-                                    <MenuItem Header="Flowchart..." x:Name="IFCMenuItem"/>
-                                    <MenuItem Header="Implementation Plan..." x:Name="IIPMenuItem"/>
-                                    <MenuItem Header="Q-Determinant..." x:Name="IQDMenuItem"/>
-                                </MenuItem>-->
-                                <MenuItem Header="Export">
-                                    <MenuItem Header="Flowchart..." x:Name="EFCMenuItem"/>
-                                    <MenuItem Header="Implementation Plan..." x:Name="EIPMenuItem"/>
-                                    <!--<MenuItem Header="Q-Determinant..." x:Name="EQDMenuItem"/>-->
+                                <MenuItem Header="FlowChart">
+                                    <MenuItem Header="Export..." x:Name="EFCMenuItem"/>
+                                    <MenuItem Header="Show As">
+                                        <MenuItem Header="Image" x:Name="SAIFCMenuItem"/>
+                                    </MenuItem>
+                                </MenuItem>
+                                <MenuItem Header="ImplementationPlan">
+                                    <MenuItem Header="Export..." x:Name="EIPMenuItem"/>
+                                    <MenuItem Header="Show As">
+                                        <MenuItem Header="Image" x:Name="SAIIPMenuItem"/>
+                                    </MenuItem>
                                 </MenuItem>
                                 <Separator/>
                                 <MenuItem Header="Properties"/>
