--- a/ModernControls/Themes/Geometry.xaml
+++ b/ModernControls/Themes/Geometry.xaml
@@ -10,4 +10,6 @@
     <Geometry x:Key="CollapsedSymbol">M 4 0 L 8 4 L 4 8 Z</Geometry>
     <Geometry x:Key="ExpandedSymbol">M 0 4 L 8 4 L 4 8 Z</Geometry>
     <Geometry x:Key="MenuIncludedSymbol">M 0 0 L 7 7 M 0 7 L 7 0 Z</Geometry>
+    <Geometry x:Key="PlusSymbol">F1 M 18,23L 58,23L 58,53L 18,53L 18,23 Z M 54,31L 22,31L 22,49L 54,49L 54,31 Z M 36,33L 40,33L 40,38L 45,38L 45,42L 40,42L 40,47L 36,47L 36,42L 31,42L 31,38L 36,38L 36,33 Z</Geometry>
+    <Geometry x:Key="MinusSymbol">F1 M 18,23L 58,23L 58,53L 18,53L 18,23 Z M 54,31L 22,31L 22,49L 54,49L 54,31 Z M 45,38L 45,42L 31,42L 31,38L 45,38 Z</Geometry>
 </ResourceDictionary>
