--- a/ModernControls/NewProjectDialog.xaml
+++ b/ModernControls/NewProjectDialog.xaml
@@ -2,17 +2,51 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:modernControls="clr-namespace:ModernControls"
-        Title="NewProjectDialog" Width="300" ResizeMode="NoResize" Height="150">
+        xmlns:internalClasses="clr-namespace:ModernControls.InternalClasses"
+        xmlns:converters="clr-namespace:ModernControls.InternalClasses.Converters"
+        Title="New Project" Width="500" ResizeMode="NoResize" Height="400">
     <modernControls:MWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/ModernControls;component/Themes/Generic.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
+        </ResourceDictionary>       
     </modernControls:MWindow.Resources>
-    <StackPanel>
-        <TextBlock FontSize="18" Text="Project title" Foreground="{DynamicResource BasicFontColorBrush}" />
-        <TextBox x:Name="ResponseTextBox"/>
-        <Button Content="OK" Click="OKButton_Click" Style="{StaticResource MTitleBarButtonStyle}" HorizontalContentAlignment="Center"/>
-    </StackPanel>
+    <Grid Background="{DynamicResource WindowBackgroundBrush}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="*"/>            
+        </Grid.ColumnDefinitions>
+        <ScrollViewer Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Background="{DynamicResource WorkplaceBackgroundBrush}">
+            <ScrollViewer.Resources>
+                <ObjectDataProvider x:Key="DataFromEnum" MethodName="GetValues" ObjectType="{x:Type system:Enum}">
+                    <ObjectDataProvider.MethodParameters>
+                        <x:Type TypeName="internalClasses:ProjectTypes"/>
+                    </ObjectDataProvider.MethodParameters>
+                </ObjectDataProvider>
+            </ScrollViewer.Resources>
+            <ListBox x:Name="ProjectList" ItemsSource="{Binding Source={StaticResource DataFromEnum}}" Background="Transparent" BorderThickness="0" Visibility="Collapsed">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                            <Image Source="{Binding Converter={converters:ProjectTypeToImgSourceConverter}}" Width="25" Height="25"/>
+                            <TextBlock Text="{Binding}" Foreground="{StaticResource BasicFontColorBrush}" VerticalAlignment="Center" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </ScrollViewer>
+        <TextBlock Text="NAME" Foreground="{DynamicResource BasicFontColorBrush}" FontSize="16" Grid.Column="0" Grid.Row="1" VerticalAlignment="Top" Margin="10,10" TextAlignment="Right"/>
+        <TextBox x:Name="ResponseTextBox" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" VerticalAlignment="Top" FontSize="16" Margin="10,10" Background="{DynamicResource WorkplaceBackgroundBrush}" Foreground="{DynamicResource BasicFontColorBrush}"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,10,10">
+            <Button Content="Ok" Click="OKButton_Click" Width="50" Background="{DynamicResource SuccesColorBrush}" Foreground="{DynamicResource BasicFontColorBrush}"/>
+            <Button Content="Cancel"  Margin="10,0,0,0" Width="50" Background="{DynamicResource ErrorColorBrush}" Foreground="{DynamicResource BasicFontColorBrush}" Click="CancelButton_Click"/>
+        </StackPanel>
+    </Grid>    
 </modernControls:MWindow>
