--- a/ModernControls/NewProjectDialog.xaml
+++ b/ModernControls/NewProjectDialog.xaml
@@ -2,14 +2,20 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:modernControls="clr-namespace:ModernControls"
-        xmlns:internalClasses="clr-namespace:ModernControls.InternalClasses"
         xmlns:converters="clr-namespace:ModernControls.InternalClasses.Converters"
+        xmlns:internalClasses="clr-namespace:ModernControls.InternalClasses"
+        xmlns:system="clr-namespace:System;assembly=mscorlib"
         Title="New Project" Width="500" ResizeMode="NoResize" Height="400">
     <modernControls:MWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/ModernControls;component/Themes/Generic.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            <ObjectDataProvider x:Key="DataFromEnum" MethodName="GetValues" ObjectType="{x:Type system:Enum}">
+                <ObjectDataProvider.MethodParameters>
+                    <x:Type TypeName="internalClasses:ProjectTypes"/>
+                </ObjectDataProvider.MethodParameters>
+            </ObjectDataProvider>
         </ResourceDictionary>       
     </modernControls:MWindow.Resources>
     <Grid Background="{DynamicResource WindowBackgroundBrush}">
@@ -24,17 +30,10 @@
             <ColumnDefinition Width="*"/>            
         </Grid.ColumnDefinitions>
         <ScrollViewer Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Background="{DynamicResource WorkplaceBackgroundBrush}">
-            <ScrollViewer.Resources>
-                <ObjectDataProvider x:Key="DataFromEnum" MethodName="GetValues" ObjectType="{x:Type system:Enum}">
-                    <ObjectDataProvider.MethodParameters>
-                        <x:Type TypeName="internalClasses:ProjectTypes"/>
-                    </ObjectDataProvider.MethodParameters>
-                </ObjectDataProvider>
-            </ScrollViewer.Resources>
-            <ListBox x:Name="ProjectList" ItemsSource="{Binding Source={StaticResource DataFromEnum}}" Background="Transparent" BorderThickness="0" Visibility="Collapsed">
+            <ListBox x:Name="ProjectList" ItemsSource="{Binding Source={StaticResource DataFromEnum}}" Background="Transparent" BorderThickness="0" SelectedIndex="0">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Tag="{Binding}" MouseLeftButtonDown="ChooseType">
                             <Image Source="{Binding Converter={converters:ProjectTypeToImgSourceConverter}}" Width="25" Height="25"/>
                             <TextBlock Text="{Binding}" Foreground="{StaticResource BasicFontColorBrush}" VerticalAlignment="Center" />
                         </StackPanel>
