--- a/ModernControls/QStudioControls/SolutionExplorer.xaml
+++ b/ModernControls/QStudioControls/SolutionExplorer.xaml
@@ -1,4 +1,5 @@
-﻿<Application x:Class="QStudio.App"
+﻿<UserControl x:Class="ModernControls.QStudioControls.SolutionExplorer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-</Application>
+    
+</UserControl>
