Удалены неиспользуемые using с помощью ReSharper

--- a/QStudio/MainWindow.xaml
+++ b/QStudio/MainWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<defaultControlsPack:ModernWindow x:Class="QStudio.MainWindow"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:defaultControlsPack="clr-namespace:DefaultControlsPack;assembly=DefaultControlsPack"
-                             Title="ASD" MinHeight="768" MinWidth="960">
+        WindowStartupLocation="CenterScreen" Title="Q-детерминант" MinHeight="768" MinWidth="1024">
 </defaultControlsPack:ModernWindow>
