--- a/DefaultControlsPack/Themes/ModernWindow.xaml
+++ b/DefaultControlsPack/Themes/ModernWindow.xaml
@@ -101,7 +101,7 @@
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="WindowState" Value="Maximized">
-                            <Setter TargetName="PART_MaxButton_Path" Property="Data" Value="{DynamicResource RestoreSymbol}"/>
+                            <Setter TargetName="PART_MaxButton_Path" Property="Data" Value="{StaticResource RestoreSymbol}"/>
                         </Trigger>
                         <Trigger Property="ResizeMode" Value="NoResize">
                             <Setter TargetName="MinButton" Property="Visibility" Value="Collapsed"/>
