--- a/DefaultControlsPack/Themes/Controls/Button.xaml
+++ b/DefaultControlsPack/Themes/Controls/Button.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Resources/Container.xaml" />
+        <ResourceDictionary Source="../Resources/Container.xaml" />
     </ResourceDictionary.MergedDictionaries>
     <Style TargetType="{x:Type Button}">
         <Setter Property="Focusable" Value="false" />
@@ -18,11 +18,11 @@
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="PART_border" Property="Background" Value="{StaticResource ActiveBrush}" />
+                            <Setter TargetName="PART_border" Property="Background" Value="{StaticResource InactiveBrush}" />
                             <Setter TargetName="PART_border" Property="Opacity" Value="0.7" />
                         </Trigger>
                         <Trigger Property="IsPressed" Value="True">
-                            <Setter TargetName="PART_border" Property="Background" Value="{StaticResource ActiveBrush}"/>
+                            <Setter TargetName="PART_border" Property="Background" Value="{StaticResource InactiveBrush}"/>
                             <Setter TargetName="PART_border" Property="Opacity" Value="0.5" />
                         </Trigger>
                     </ControlTemplate.Triggers>
