--- a/DefaultControlsPack/Themes/Controls/EnclosedTabControl.xaml
+++ b/DefaultControlsPack/Themes/Controls/EnclosedTabControl.xaml
@@ -29,14 +29,45 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <Border x:Name="Border" Grid.Row="0" BorderThickness="0,0,0,1" Background="{StaticResource SlaveBackgroundBrush}" BorderBrush="{StaticResource ActiveBrush}"
-                                KeyboardNavigation.TabNavigation="Local" KeyboardNavigation.DirectionalNavigation="Contained" KeyboardNavigation.TabIndex="2">
-                <ScrollViewer>
-                    <ContentPresenter x:Name="PART_SelectedContentHost" Margin="4" ContentSource="SelectedContent"  />
-                </ScrollViewer>
-            </Border>
+            <Grid Background="{StaticResource SlaveBackgroundBrush}" Grid.Row="0" HorizontalAlignment="Stretch"
+                  KeyboardNavigation.TabNavigation="Local" KeyboardNavigation.DirectionalNavigation="Contained" KeyboardNavigation.TabIndex="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <StackPanel x:Name="Header" Background="{StaticResource ErrorBrush}" HorizontalAlignment="Stretch" Grid.Column="0" Grid.Row="0">
+                    <TextBlock Text="{Binding SelectedItem.Header, RelativeSource={RelativeSource AncestorType={x:Type local:EnclosedTabControl}}}" Foreground="{StaticResource BaseFontBrush}" FontSize="14" Margin="2,0,0,0"/>    
+                </StackPanel>
+                <StackPanel x:Name="Buttons" Background="{StaticResource ErrorBrush}" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
+                    <Button x:Name="CloseTabButton" Style="{StaticResource {x:Type Button}}" Width="20" Height="20" Tag="{Binding SelectedItem, RelativeSource={RelativeSource AncestorType={x:Type local:EnclosedTabControl}}}">
+                        <Grid MaxHeight="9" MaxWidth="9">
+                            <Path Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
+                                                StrokeThickness="1.5" Stretch="None" Data="{DynamicResource CloseSymbol}" />
+                        </Grid>
+                    </Button>
+                </StackPanel>
+                <Border x:Name="Border" Grid.Row="1" BorderThickness="0" Grid.Column="0" Grid.ColumnSpan="2">
+                    <ScrollViewer>
+                        <ContentPresenter x:Name="PART_SelectedContentHost" Margin="4" ContentSource="SelectedContent"  />
+                    </ScrollViewer>
+                </Border>
+            </Grid>
             <TabPanel x:Name="HeaderPanel" Grid.Row="1" Panel.ZIndex="1" Margin="0,0,4,-1" IsItemsHost="True" KeyboardNavigation.TabIndex="1" Background="Transparent" />
         </Grid>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter TargetName="Header" Property="Background" Value="{StaticResource ActiveBrush}"/>
+                <Setter TargetName="Buttons" Property="Background" Value="{StaticResource ActiveBrush}"/>
+            </Trigger>
+            <Trigger Property="HasItems" Value="False">
+                <Setter TargetName="Header" Property="Visibility" Value="Collapsed"/>
+                <Setter TargetName="Buttons" Property="Visibility" Value="Collapsed"/>
+            </Trigger>
+        </ControlTemplate.Triggers>
     </ControlTemplate>
 
     <Style TargetType="{x:Type local:EnclosedTabControl}">
