--- a/QStudio/MainWindow.xaml
+++ b/QStudio/MainWindow.xaml
@@ -84,7 +84,7 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="1*" MaxHeight="500"/>
                 </Grid.RowDefinitions>
-                <basicComponentsPack:WorkplaceTabs/>
+                <basicComponentsPack:WorkplaceTabs x:Name="WorkplaceTabs"/>
               <!--  <local:ExtendedTabControl />-->
                 <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch"/>
                 <!--<local:BlockPanel Grid.Row="2" Title="Output" VerticalAlignment="Stretch">
@@ -105,6 +105,7 @@
                     <local:ExtendedTreeView x:Name="SolutionTree"/>
                 </local:BlockPanel>-->
                 <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch"/>
+                <Button Content="Addtab" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="2" Click="ButtonBase_OnClick"/>
                <!-- <local:BlockPanel Grid.Row="2" Title="Properties"/>-->
             </Grid>
         </Grid>
