--- a/DefaultControlsPack/Themes/Controls/EnclosedTabControl.xaml
+++ b/DefaultControlsPack/Themes/Controls/EnclosedTabControl.xaml
@@ -39,10 +39,10 @@
                     <ColumnDefinition/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
-                <StackPanel x:Name="Header" Background="{StaticResource ErrorBrush}" HorizontalAlignment="Stretch" Grid.Column="0" Grid.Row="0">
+                <StackPanel x:Name="Header" Background="{StaticResource BorderBrush}" HorizontalAlignment="Stretch" Grid.Column="0" Grid.Row="0">
                     <TextBlock Text="{Binding SelectedItem.Header, RelativeSource={RelativeSource AncestorType={x:Type local:EnclosedTabControl}}}" Foreground="{StaticResource BaseFontBrush}" FontSize="14" Margin="2,0,0,0"/>    
                 </StackPanel>
-                <StackPanel x:Name="Buttons" Background="{StaticResource ErrorBrush}" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
+                <StackPanel x:Name="Buttons" Background="{StaticResource BorderBrush}" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
                     <Button x:Name="CloseTabButton" Style="{StaticResource {x:Type Button}}" Width="20" Height="20" Tag="{Binding SelectedItem, RelativeSource={RelativeSource AncestorType={x:Type local:EnclosedTabControl}}}">
                         <Grid MaxHeight="9" MaxWidth="9">
                             <Path Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
