--- a/DefaultControlsPack/Themes/Controls/EnclosedTabControl.xaml
+++ b/DefaultControlsPack/Themes/Controls/EnclosedTabControl.xaml
@@ -16,9 +16,9 @@
             <TabPanel x:Name="HeaderPanel" Grid.Row="0" Panel.ZIndex="1" Margin="0,0,4,-1" IsItemsHost="True" KeyboardNavigation.TabIndex="1" Background="Transparent" />
             <Border x:Name="Border" Grid.Row="1" BorderThickness="0,1,0,0" Background="{StaticResource SlaveBackgroundBrush}" BorderBrush="{StaticResource ActiveBrush}"
                                 KeyboardNavigation.TabNavigation="Local" KeyboardNavigation.DirectionalNavigation="Contained" KeyboardNavigation.TabIndex="2">
-                <ScrollViewer>
-                    <ContentPresenter x:Name="PART_SelectedContentHost" Margin="4" ContentSource="SelectedContent"  />
-                </ScrollViewer>
+                
+                    <ContentPresenter x:Name="PART_SelectedContentHost" ContentSource="SelectedContent"  />
+                
             </Border>
         </Grid>
     </ControlTemplate>
@@ -51,9 +51,7 @@
                     </Button>
                 </StackPanel>
                 <Border x:Name="Border" Grid.Row="1" BorderThickness="0" Grid.Column="0" Grid.ColumnSpan="2">
-                    <ScrollViewer>
-                        <ContentPresenter x:Name="PART_SelectedContentHost" Margin="4" ContentSource="SelectedContent"  />
-                    </ScrollViewer>
+                        <ContentPresenter x:Name="PART_SelectedContentHost" ContentSource="SelectedContent"/>
                 </Border>
             </Grid>
             <TabPanel x:Name="HeaderPanel" Grid.Row="1" Panel.ZIndex="1" Margin="0,0,4,-1" IsItemsHost="True" KeyboardNavigation.TabIndex="1" Background="Transparent" />
