Добавил стили для меню

--- a/DefaultControlsPack/Themes/Controls/GridSplitter.xaml
+++ b/DefaultControlsPack/Themes/Controls/GridSplitter.xaml
@@ -7,7 +7,7 @@
 
     <Style TargetType="{x:Type GridSplitter}">
         <Setter Property="SnapsToDevicePixels" Value="True" />
-        <Setter Property="Background" Value="{StaticResource BorderBrush}" />
+        <Setter Property="Background" Value="{StaticResource MasterBackgroundBrush}" />
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="Template">
             <Setter.Value>
