Запилил тунельное событие

--- a/QStudio/MainWindow.xaml
+++ b/QStudio/MainWindow.xaml
@@ -86,16 +86,7 @@
                 </Grid.RowDefinitions>
                 <defaultControlsPack:EnclosedTabControl VerticalContentPosition="Top" x:Name="RightTopSegment" Grid.Row="0">
                     <defaultControlsPack:EnclosedTabItem Header="Solution Explorer" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
-                        <defaultControlsPack:SearchTreeView>
-                            <defaultControlsPack:IconTreeViewItem Header="SE">
-                                <defaultControlsPack:IconTreeViewItem Header="111111"/>
-                                <defaultControlsPack:IconTreeViewItem Header="2222">
-                                    <defaultControlsPack:IconTreeViewItem Header="2221111111111"/>
-                                    <defaultControlsPack:IconTreeViewItem Header="2222222222222"/>
-                                </defaultControlsPack:IconTreeViewItem>
-                                <defaultControlsPack:IconTreeViewItem Header="333333333"/>
-                            </defaultControlsPack:IconTreeViewItem>
-                        </defaultControlsPack:SearchTreeView>
+                        <basicComponentsPack:SolutionExplorer x:Name="SolutionExplorer" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
                     </defaultControlsPack:EnclosedTabItem>
                 </defaultControlsPack:EnclosedTabControl>
                 <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch"/>
